--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <link rel="shortcut icon" href="./src/assets/icons/img_wicthor-portfolio.ico" type="image/x-icon">
+  <title>Wicthor Dev</title>
 </head>
 <body>
   <div id="root"></div>
